--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 			<artifactId>opencsv</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<!-- tag::starter[] -->
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>
+				vaadin-spring-boot-starter
+			</artifactId>
+			<version>24.4.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
